tests/cases/parser/misc/malformed_function_literal_arrow.stderr
error: expected an expression, however received a `=`
 --> $DIR/malformed_function_literal_arrow.hash:3:36
2 |   
3 |   str_eq: (str, str) -> str = (a, b) = a == b;
  |                                      ^ 
